--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -17,6 +17,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 # Addon settings
+
 msgctxt "#30000"
 msgid "GENERAL"
 msgstr "OBECNÉ"
@@ -38,16 +39,16 @@ msgid "View mode [id]"
 msgstr "Typ zobrazení [id]"
 
 msgctxt "#30005"
-msgid "Search also adult videos"
-msgstr "Hledat také videa pro dospělé"
+msgid "Search incl. adult videos"
+msgstr "Hledat vč. videí pro dospělé"
 
 msgctxt "#30006"
-msgid "Search also own videos"
-msgstr "Hledat také vlastní videa"
+msgid "Search incl. own videos"
+msgstr "Hledat vč. vlastních videí"
 
 msgctxt "#30007"
-msgid "Search videos with duration"
-msgstr "Hledat videa s délkou"
+msgid "Search by video duration"
+msgstr "Hledat videa podle délky"
 
 msgctxt "#30008"
 msgid "Any"
@@ -81,213 +82,156 @@ msgctxt "#30015"
 msgid "By relevance"
 msgstr "Podle relevance"
 
-msgctxt "#30018"
+msgctxt "#30016"
 msgid "VK user access token"
 msgstr "VK uživatelský token"
 
-msgctxt "#30019"
+msgctxt "#30017"
 msgid "LOGOUT"
 msgstr "ODHLÁSIT"
 
-# Addon authorization
-msgctxt "#30020"
-msgid "Enter your VK login/email"
-msgstr "Zadejte své VK uživ. jméno/email"
-
-msgctxt "#30021"
-msgid "Enter your VK password"
-msgstr "Zadejte své VK heslo"
-
-# Logout
-msgctxt "#30025"
-msgid "User logged out."
-msgstr "Uživatel odhlášen."
-
-# Addon main menu
-msgctxt "#30030"
-msgid "SEARCH"
-msgstr "HLEDAT"
-
-msgctxt "#30031"
-msgid "SEARCH HISTORY"
-msgstr "HISTORIE HLEDÁNÍ"
-
-msgctxt "#30032"
-msgid "MY VIDEOS"
-msgstr "MOJE VIDEA"
-
-msgctxt "#30033"
-msgid "MY LIKED VIDEOS"
-msgstr "MOJE OBLÍBENÁ VIDEA"
-
-msgctxt "#30034"
-msgid "MY VIDEO ALBUMS"
-msgstr "MOJE VIDEO ALBA"
-
-msgctxt "#30035"
-msgid "MY COMMUNITIES"
-msgstr "MOJE KOMUNITY"
-
-msgctxt "#30036"
-msgid "MY LIKED COMMUNITIES"
-msgstr "MOJE OBLÍBENÉ KOMUNITY"
-
-msgctxt "#30037"
-msgid "STATS"
-msgstr "STATISTIKY"
-
-# Context menu actions
-msgctxt "#30050"
-msgid "Unlike video"
-msgstr "Už se mi nelíbí"
-
-msgctxt "#30051"
-msgid "Like video"
-msgstr "Líbí se mi"
-
-msgctxt "#30052"
-msgid "Set albums for video"
-msgstr "Zařadit do alb"
-
-msgctxt "#30053"
-msgid "Search similar"
-msgstr "Hledat podobné"
-
-msgctxt "#30054"
-msgid "Unlike community"
-msgstr "Už se mi nelíbí"
-
-msgctxt "#30055"
-msgid "Like community"
-msgstr "Líbí se mi"
-
-msgctxt "#30056"
-msgid "Leave community"
-msgstr "Opustit komunitu"
-
-msgctxt "#30058"
-msgid "Rename album"
-msgstr "Přejmenovat album"
-
-msgctxt "#30059"
-msgid "Move up"
-msgstr "Posunout nahoru"
-
-msgctxt "#30060"
-msgid "Move down"
-msgstr "Posunout dolů"
-
-msgctxt "#30061"
-msgid "Delete album"
-msgstr "Smazat album"
-
-msgctxt "#30062"
-msgid "Add album"
-msgstr "Přidat album"
-
-msgctxt "#30063"
-msgid "Delete search"
-msgstr "Smazat hledání"
-
-# Search
-msgctxt "#30090"
-msgid "Enter the search query:"
-msgstr "Zadejte hledaný dotaz:"
-
-msgctxt "#30091"
-msgid "{0} videos found."
-msgstr "{0} videí nalezeno."
-
-msgctxt "#30092"
-msgid "Search deleted."
-msgstr "Hledání smazáno."
-
-# Video albums
-msgctxt "#30110"
-msgid "Enter the album title:"
-msgstr "Zadejte název alba:"
-
-msgctxt "#30111"
-msgid "Album added."
-msgstr "Album přidáno."
-
-msgctxt "#30112"
-msgid "Confirmation:"
-msgstr "Potvrzení:"
-
-msgctxt "#30113"
-msgid "Do you want to delete the album?"
-msgstr "Chcete smazat album?"
-
-msgctxt "#30114"
-msgid "Album deleted."
-msgstr "Album smazáno."
-
-msgctxt "#30115"
-msgid "Edit the album title:"
-msgstr "Upravte název alba:"
-
-msgctxt "#30116"
-msgid "Album renamed."
-msgstr "Album přejmenováno."
-
-msgctxt "#30117"
-msgid "Set the albums for video:"
-msgstr "Nastavte alba pro video:"
-
-msgctxt "#30118"
-msgid "Albums set."
-msgstr "Alba nastavena."
-
-# Likes
-msgctxt "#30130"
-msgid "Video liked."
-msgstr "Video přidáno do oblíbených."
-
-msgctxt "#30131"
-msgid "Video unliked."
-msgstr "Video odebráno z oblíbených."
-
-msgctxt "#30132"
-msgid "Community liked."
-msgstr "Komunita přidána do oblíbených."
-
-msgctxt "#30133"
-msgid "Community unliked."
-msgstr "Komunita odebrána z oblíbených."
-
-# Communities
-msgctxt "#30140"
-msgid "Community was left."
-msgstr "Komunita opuštěna."
-
-# Stats
-msgctxt "#30150"
-msgid "Lorem ipsum"
-msgstr "Lorem ipsum"
-
-# Paginator
-msgctxt "#30190"
-msgid "NEXT PAGE"
-msgstr "DALŠÍ STRANA"
-
 # Errors
-msgctxt "#30200"
+
+msgctxt "#30020"
 msgid "VK authorization error!"
 msgstr "Chyba VK autorizace!"
 
-msgctxt "#30201"
+msgctxt "#30021"
 msgid "VK API error!"
 msgstr "Chyba VK API!"
 
-msgctxt "#30202"
-msgid "Routing error!"
+msgctxt "#30022"
+msgid "Addon routing error!"
 msgstr "Chyba routingu!"
 
-msgctxt "#30203"
-msgid "Missing data file error!"
+msgctxt "#30023"
+msgid "Addon data file error!"
 msgstr "Chyba datového souboru!"
 
-msgctxt "#30204"
-msgid "Resolving error!"
-msgstr "Chyba resolveru!"
+msgctxt "#30024"
+msgid "Video resolving error!"
+msgstr "Chyba video resolveru!"
+
+# Common
+
+msgctxt "#30030"
+msgid "VK account email"
+msgstr "Email VK účtu"
+
+msgctxt "#30031"
+msgid "VK account password"
+msgstr "Heslo VK účtu"
+
+msgctxt "#30032"
+msgid "User logged out."
+msgstr "Uživatel odhlášen."
+
+# Main menu
+
+msgctxt "#30040"
+msgid "SEARCH"
+msgstr "HLEDAT"
+
+msgctxt "#30041"
+msgid "SEARCH HISTORY"
+msgstr "HISTORIE HLEDÁNÍ"
+
+msgctxt "#30042"
+msgid "MY VIDEOS"
+msgstr "MOJE VIDEA"
+
+msgctxt "#30043"
+msgid "MY LIKED VIDEOS"
+msgstr "MOJE OBLÍBENÁ VIDEA"
+
+msgctxt "#30044"
+msgid "MY VIDEO ALBUMS"
+msgstr "MOJE VIDEO ALBA"
+
+msgctxt "#30045"
+msgid "MY COMMUNITIES"
+msgstr "MOJE KOMUNITY"
+
+msgctxt "#30046"
+msgid "MY LIKED COMMUNITIES"
+msgstr "MOJE OBLÍBENÉ KOMUNITY"
+
+# Videos
+
+msgctxt "#30050"
+msgid "NEXT PAGE"
+msgstr "DALŠÍ STRANA"
+
+msgctxt "#30051"
+msgid "Search videos"
+msgstr "Hledat videa"
+
+msgctxt "#30052"
+msgid "{0} videos found."
+msgstr "{0} videí nalezeno."
+
+msgctxt "#30053"
+msgid "Like video"
+msgstr "Video se mi líbí"
+
+msgctxt "#30054"
+msgid "Unlike video"
+msgstr "Video už se mi nelíbí"
+
+msgctxt "#30055"
+msgid "Add video to albums"
+msgstr "Zařadit video do alb"
+
+# Video albums
+
+msgctxt "#30060"
+msgid "Rename album"
+msgstr "Přejmenovat album"
+
+msgctxt "#30061"
+msgid "Move album up"
+msgstr "Posunout album nahoru"
+
+msgctxt "#30062"
+msgid "Move album down"
+msgstr "Posunout album dolů"
+
+msgctxt "#30063"
+msgid "Delete album"
+msgstr "Smazat album"
+
+msgctxt "#30064"
+msgid "Do you want to delete the album?"
+msgstr "Opravdu chcete smazat album?"
+
+msgctxt "#30065"
+msgid "Create new album"
+msgstr "Vytvořit nové album"
+
+# Communities
+
+msgctxt "#30070"
+msgid "Like community"
+msgstr "Komunita se mi líbí"
+
+msgctxt "#30071"
+msgid "Unlike community"
+msgstr "Komunita už se mi nelíbí"
+
+msgctxt "#30072"
+msgid "Unfollow community"
+msgstr "Opustit komunitu"
+
+# Search history
+
+msgctxt "#30080"
+msgid "Search similar"
+msgstr "Hledat podobné"
+
+msgctxt "#30081"
+msgid "Delete search"
+msgstr "Smazat hledání"
+
+msgctxt "#30082"
+msgid "Do you want to delete the search?"
+msgstr "Opravdu chcete smazat hledání?"
