--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -201,8 +201,8 @@ msgid "Delete album"
 msgstr "Smazat album"
 
 msgctxt "#30064"
-msgid "Do you want to delete the album?"
-msgstr "Opravdu chcete smazat album?"
+msgid "Do you want to delete this album?"
+msgstr "Opravdu chcete smazat toto album?"
 
 msgctxt "#30065"
 msgid "Create new album"
@@ -233,5 +233,5 @@ msgid "Delete search"
 msgstr "Smazat hledání"
 
 msgctxt "#30082"
-msgid "Do you want to delete the search?"
-msgstr "Opravdu chcete smazat hledání?"
+msgid "Do you want to delete this search?"
+msgstr "Opravdu chcete smazat toho hledání?"
