--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -201,7 +201,7 @@ msgid "Delete album"
 msgstr ""
 
 msgctxt "#30064"
-msgid "Do you want to delete the album?"
+msgid "Do you want to delete this album?"
 msgstr ""
 
 msgctxt "#30065"
@@ -233,5 +233,5 @@ msgid "Delete search"
 msgstr ""
 
 msgctxt "#30082"
-msgid "Do you want to delete the search?"
+msgid "Do you want to delete this search?"
 msgstr ""
