--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -90,6 +90,14 @@ msgctxt "#30017"
 msgid "LOGOUT"
 msgstr "ODHLÁSIT"
 
+msgctxt "#30018"
+msgid "Addon request history"
+msgstr "Historie volání doplňku"
+
+msgctxt "#30019"
+msgid "Played video history"
+msgstr "Historie přehraných videí"
+
 # Errors
 
 msgctxt "#30020"
@@ -157,8 +165,12 @@ msgid "MY LIKED COMMUNITIES"
 msgstr "MOJE OBLÍBENÉ KOMUNITY"
 
 msgctxt "#30047"
-msgid "PLAYED VIDEOS HISTORY"
-msgstr "HISTORIE PŘEHRANÝCH VIDEÍ"
+msgid "PLAYED VIDEOS"
+msgstr "PŘEHRANÁ VIDEA"
+
+msgctxt "#30048"
+msgid "WATCHLIST"
+msgstr "WATCHLIST"
 
 # Videos
 
@@ -185,6 +197,18 @@ msgstr "Video už se mi nelíbí"
 msgctxt "#30055"
 msgid "Add video to albums"
 msgstr "Zařadit video do alb"
+
+msgctxt "#30056"
+msgid "Add video to watchlist"
+msgstr "Přidat video na watchlist"
+
+msgctxt "#30057"
+msgid "Delete video from watchlist"
+msgstr "Smazat video z watchlistu"
+
+msgctxt "#30058"
+msgid "Do you want to delete this video?"
+msgstr "Opravdu chcete smazat toto video?"
 
 # Video albums
 
