--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -90,6 +90,14 @@ msgctxt "#30017"
 msgid "LOGOUT"
 msgstr ""
 
+msgctxt "#30018"
+msgid "Addon request history"
+msgstr ""
+
+msgctxt "#30019"
+msgid "Played video history"
+msgstr ""
+
 # Errors
 
 msgctxt "#30020"
@@ -157,7 +165,11 @@ msgid "MY LIKED COMMUNITIES"
 msgstr ""
 
 msgctxt "#30047"
-msgid "PLAYED VIDEOS HISTORY"
+msgid "PLAYED VIDEOS"
+msgstr ""
+
+msgctxt "#30048"
+msgid "WATCHLIST"
 msgstr ""
 
 # Videos
@@ -184,6 +196,18 @@ msgstr ""
 
 msgctxt "#30055"
 msgid "Add video to albums"
+msgstr ""
+
+msgctxt "#30056"
+msgid "Add video to watchlist"
+msgstr ""
+
+msgctxt "#30057"
+msgid "Delete video from watchlist"
+msgstr ""
+
+msgctxt "#30058"
+msgid "Do you want to delete this video?"
 msgstr ""
 
 # Video albums
