--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -134,6 +134,14 @@ msgctxt "#30032"
 msgid "User logged out."
 msgstr "Uživatel odhlášen."
 
+msgctxt "#30033"
+msgid "Are you sure?"
+msgstr "Jste si jisti?"
+
+msgctxt "#30034"
+msgid "NEXT PAGE"
+msgstr "DALŠÍ STRANA"
+
 # Main menu
 
 msgctxt "#30040"
@@ -174,10 +182,6 @@ msgstr "WATCHLIST"
 
 # Videos
 
-msgctxt "#30050"
-msgid "NEXT PAGE"
-msgstr "DALŠÍ STRANA"
-
 msgctxt "#30051"
 msgid "Search videos"
 msgstr "Hledat videa"
@@ -207,8 +211,12 @@ msgid "Delete video from watchlist"
 msgstr "Smazat video z watchlistu"
 
 msgctxt "#30058"
-msgid "Do you want to delete this video?"
-msgstr "Opravdu chcete smazat toto video?"
+msgid "Clear watchlist"
+msgstr "Vymazat watchlist"
+
+msgctxt "#30059"
+msgid "Clear played videos"
+msgstr "Vymazat přehraná videa"
 
 # Video albums
 
@@ -229,10 +237,6 @@ msgid "Delete album"
 msgstr "Smazat album"
 
 msgctxt "#30064"
-msgid "Do you want to delete this album?"
-msgstr "Opravdu chcete smazat toto album?"
-
-msgctxt "#30065"
 msgid "Create new album"
 msgstr "Vytvořit nové album"
 
@@ -261,5 +265,5 @@ msgid "Delete search"
 msgstr "Smazat hledání"
 
 msgctxt "#30082"
-msgid "Do you want to delete this search?"
-msgstr "Opravdu chcete smazat toho hledání?"
+msgid "Clear search history"
+msgstr "Vymazat historii"
