--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -134,6 +134,14 @@ msgctxt "#30032"
 msgid "User logged out."
 msgstr ""
 
+msgctxt "#30033"
+msgid "Are you sure?"
+msgstr ""
+
+msgctxt "#30034"
+msgid "NEXT PAGE"
+msgstr ""
+
 # Main menu
 
 msgctxt "#30040"
@@ -174,10 +182,6 @@ msgstr ""
 
 # Videos
 
-msgctxt "#30050"
-msgid "NEXT PAGE"
-msgstr ""
-
 msgctxt "#30051"
 msgid "Search videos"
 msgstr ""
@@ -207,7 +211,11 @@ msgid "Delete video from watchlist"
 msgstr ""
 
 msgctxt "#30058"
-msgid "Do you want to delete this video?"
+msgid "Clear watchlist"
+msgstr ""
+
+msgctxt "#30059"
+msgid "Clear played videos"
 msgstr ""
 
 # Video albums
@@ -229,10 +237,6 @@ msgid "Delete album"
 msgstr ""
 
 msgctxt "#30064"
-msgid "Do you want to delete this album?"
-msgstr ""
-
-msgctxt "#30065"
 msgid "Create new album"
 msgstr ""
 
@@ -261,5 +265,5 @@ msgid "Delete search"
 msgstr ""
 
 msgctxt "#30082"
-msgid "Do you want to delete this search?"
+msgid "Clear search history"
 msgstr ""
