--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -142,6 +142,10 @@ msgctxt "#30034"
 msgid "NEXT PAGE"
 msgstr "DALŠÍ STRANA"
 
+msgctxt "#30035"
+msgid "Skip to offset"
+msgstr "Přeskočit na offset"
+
 # Main menu
 
 msgctxt "#30040"
