--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -6,17 +6,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: KODI Addons\n"
 "Report-Msgid-Bugs-To: http://trac.kodi.tv/\n"
-"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
+"PO-Revision-Date: 2019-05-07 20:30+0200\n"
+"Last-Translator: Tomáš Mistoler <tomas.mistoler@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/kodi-main/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs_CZ\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-
-# Settings -----
+"X-Generator: Poedit 2.2.1\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: .\n"
 
 msgctxt "#30000"
 msgid "GENERAL"
@@ -98,8 +98,6 @@ msgctxt "#30019"
 msgid "Keep history of played videos"
 msgstr "Ukládat historii přehraných videí"
 
-# Errors -----
-
 msgctxt "#30020"
 msgid "VK authorization error!"
 msgstr "Chyba VK autorizace!"
@@ -119,8 +117,6 @@ msgstr "Chyba datového souboru!"
 msgctxt "#30024"
 msgid "Video resolving error!"
 msgstr "Chyba video resolvingu!"
-
-# Common -----
 
 msgctxt "#30030"
 msgid "VK account email/phone"
@@ -154,11 +150,9 @@ msgctxt "#30037"
 msgid "Follow"
 msgstr "Sledovat"
 
-# Menu -----
-
 msgctxt "#30040"
-msgid "Search"
-msgstr "Hledat"
+msgid "Search videos"
+msgstr "Hledat videa"
 
 msgctxt "#30041"
 msgid "Search history"
@@ -192,8 +186,6 @@ msgctxt "#30048"
 msgid "Watchlist"
 msgstr "Watchlist"
 
-# Videos -----
-
 msgctxt "#30053"
 msgid "Add to liked videos"
 msgstr "Přidat do oblíbených videí"
@@ -222,8 +214,6 @@ msgctxt "#30059"
 msgid "Clear played videos"
 msgstr "Vymazat přehraná videa"
 
-# Video albums -----
-
 msgctxt "#30060"
 msgid "Rename album"
 msgstr "Přejmenovat album"
@@ -244,8 +234,6 @@ msgctxt "#30064"
 msgid "Create new album"
 msgstr "Vytvořit nové album"
 
-# Communities -----
-
 msgctxt "#30070"
 msgid "Add to liked communities"
 msgstr "Přidat do oblíbených komunit"
@@ -258,8 +246,6 @@ msgctxt "#30072"
 msgid "Leave community"
 msgstr "Opustit komunitu"
 
-# Search -----
-
 msgctxt "#30081"
 msgid "Delete search"
 msgstr "Smazat hledání"
@@ -269,8 +255,8 @@ msgid "Clear search history"
 msgstr "Vymazat historii hledání"
 
 msgctxt "#30083"
-msgid "Search"
-msgstr "Hledat"
+msgid "Search videos"
+msgstr "Hledat videa"
 
 msgctxt "#30084"
 msgid "{0} videos searched"
