--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -6,17 +6,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: KODI Addons\n"
 "Report-Msgid-Bugs-To: http://trac.kodi.tv/\n"
-"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
+"PO-Revision-Date: 2019-05-07 20:29+0200\n"
+"Last-Translator: Tomáš Mistoler <tomas.mistoler@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/kodi-main/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en_GB\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-# Settings -----
+"X-Generator: Poedit 2.2.1\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: .\n"
 
 msgctxt "#30000"
 msgid "GENERAL"
@@ -98,8 +98,6 @@ msgctxt "#30019"
 msgid "Keep history of played videos"
 msgstr ""
 
-# Errors -----
-
 msgctxt "#30020"
 msgid "VK authorization error!"
 msgstr ""
@@ -119,8 +117,6 @@ msgstr ""
 msgctxt "#30024"
 msgid "Video resolving error!"
 msgstr ""
-
-# Common -----
 
 msgctxt "#30030"
 msgid "VK account email/phone"
@@ -154,10 +150,8 @@ msgctxt "#30037"
 msgid "Follow"
 msgstr ""
 
-# Menu -----
-
 msgctxt "#30040"
-msgid "Search"
+msgid "Search videos"
 msgstr ""
 
 msgctxt "#30041"
@@ -192,8 +186,6 @@ msgctxt "#30048"
 msgid "Watchlist"
 msgstr ""
 
-# Videos -----
-
 msgctxt "#30053"
 msgid "Add to liked videos"
 msgstr ""
@@ -222,8 +214,6 @@ msgctxt "#30059"
 msgid "Clear played videos"
 msgstr ""
 
-# Video albums -----
-
 msgctxt "#30060"
 msgid "Rename album"
 msgstr ""
@@ -244,8 +234,6 @@ msgctxt "#30064"
 msgid "Create new album"
 msgstr ""
 
-# Communities -----
-
 msgctxt "#30070"
 msgid "Add to liked communities"
 msgstr ""
@@ -258,8 +246,6 @@ msgctxt "#30072"
 msgid "Leave community"
 msgstr ""
 
-# Search -----
-
 msgctxt "#30081"
 msgid "Delete search"
 msgstr ""
@@ -269,7 +255,7 @@ msgid "Clear search history"
 msgstr ""
 
 msgctxt "#30083"
-msgid "Search"
+msgid "Search videos"
 msgstr ""
 
 msgctxt "#30084"
