- go to community - follow community - skip to page

--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -39,8 +39,8 @@ msgid "View mode id"
 msgstr "View mode id"
 
 msgctxt "#30005"
-msgid "Search incl. adult videos"
-msgstr "Hledat vč. videí pro dospělé"
+msgid "Search without age restrictions"
+msgstr "Hledat bez věkového omezení"
 
 msgctxt "#30006"
 msgid "Search incl. own videos"
