--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -265,3 +265,7 @@ msgstr ""
 msgctxt "#30085"
 msgid "Search by similar title"
 msgstr ""
+
+msgctxt "#30090"
+msgid "Prefer HLS (adaptive bitrate)"
+msgstr ""
